syntax = "proto3";

package user;

option java_multiple_files = true;
option java_package = "com.study.userservice.grpc";
option java_outer_classname = "UserProto";

enum Gender {
  UNSPECIFIED = 0;
  FEMALE = 1;
  MALE = 2;
  OTHER = 3;
}

message CreateUserRequest {
  string username = 1;
  string dateOfBirth = 2;
  Gender gender = 3;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string dateOfBirth = 3;
  Gender gender = 4;
  string avatarUrl = 5;
}

message GetUserByIdRequest {
  string id = 1;
}

message GetUsersByListOfIdsRequest {
  repeated string ids = 1;
  string cursor = 2;
  int32 size = 3;
}

message GetUsersByListOfIdsResponse {
  repeated UserResponse users = 1;
  int64 total = 2;
  int32 size = 3;
  string nextCursor = 4;
}

message SearchUserRequest {
  string keyword = 1;
  string cursor = 2;
  int32 size = 3;
}

message SearchUserResponse {
  repeated UserResponse users = 1;
  int64 total = 2;
  string nextCursor = 3;
}

message UpdateUserRequest {
  string id = 1;
  string username = 2;
  string dateOfBirth = 3;
  Gender gender = 4;
  string avatarUrl = 5;
}

// gRPC Service
service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUserById(GetUserByIdRequest) returns (UserResponse);
  rpc GetUsersByListOfIds(GetUsersByListOfIdsRequest) returns (GetUsersByListOfIdsResponse);
  rpc SearchUserByUsername(SearchUserRequest) returns (SearchUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
}